--- a/pages/data.mdx
+++ b/pages/data.mdx
@@ -19,7 +19,7 @@ export default Template
 <div>
 
 The Data objects behaves like a simple JavaScript object in which you can store anything.
-It updates the user interface of your project on every change, and can be used to share data between components and Frames. In this example, we’re simply changing the `text` property of any text layer the override gets applied to.
+It updates the user interface of your project on every change, and can be used to share data between components and Frames. In this example, we’re simply changing the `text` property of any text layer the override gets applied to. <a href="https://www.framer.com/docs/overrides">Learn more about Overrides</a>.
 
 </div>
 
