updating scroll docs (#16)

--- a/pages/scroll.mdx
+++ b/pages/scroll.mdx
@@ -66,6 +66,8 @@ It attempts to do so automatically by measuring your added children in the dom u
 
 <APIProperty name="ScrollConfig.contentOffsetY" />
 
+<APIProperty name="ScrollConfig.scrollAnimate" />
+
 ## Events
 
 <APIMethod name="ScrollEvents.onScroll()" />
