Remove double 'the' on the PropertyControls page (#17)

--- a/pages/property-controls.mdx
+++ b/pages/property-controls.mdx
@@ -50,7 +50,7 @@ addPropertyControls(MyComponent, {
 
 <div>
 
-Controls can be hidden by adding the `hidden` function to the property description. The function receives an object containing the set properties and returns a `boolean`. In this example we hide the the `text` property entirely when the connected property (the `toggle`) is `false`.
+Controls can be hidden by adding the `hidden` function to the property description. The function receives an object containing the set properties and returns a `boolean`. In this example we hide the `text` property entirely when the connected property (the `toggle`) is `false`.
 
 Now you can toggle the visibilty of the text property control by changing the `toggle` boolean from within the property panel in Framer X.
 
