Fix typo in pages/index.mdx & pages/tutorial.mdx (#20)

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -184,7 +184,7 @@ export function MyComponent() {
 
 <div>
 
-You can easily make any `Frame` draggble by using the `drag` property.
+You can easily make any `Frame` draggable by using the `drag` property.
 To constrain dragging to a vertical or horizontal axis, you can include an optional `"x"` or `"y"` value.
 
 <CTA name="Learn More" link="/api/examples/#dragging" />
