--- a/pages/color.mdx
+++ b/pages/color.mdx
@@ -7,6 +7,8 @@ import {
   APIFunction,
   APIProperty,
   APIInterface,
+  Callout,
+  Link,
 } from "../components"
 
 export default Template
@@ -26,6 +28,17 @@ Here, we’re defining a blue color, dynamically making it lighter, and then app
 To apply the color, we’re first converting it to a string value.
 The returned `hex` string value is `#3377FF`.
 These modification and conversion functions are especially useful when working with larger color schemes, and for subtly altering base colors with visual states like `hover`.
+
+<Callout>
+  The Color function does not support
+  <strong> Shared Colors</strong> yet. <br />
+  Learn how to import shared colors in{" "}
+  <Link href="/pages/canvas-components.mdx">
+    {" "}
+    Canvas Components
+  </Link>
+  .
+</Callout>
 
 </div>
 
