clarify on Tutorial Text

--- a/pages/tutorial.mdx
+++ b/pages/tutorial.mdx
@@ -460,7 +460,7 @@ You now have a functioning `Slider` component but its not of much use yet. It do
 
 Let’s create a profile image `Frame` that will get state updates from the `Slider` to control its scale. To do this, you’ll want to add an image `frame` and use React Hooks to manage the state of the image scale.
 
-Hooks are new helper functions that allow you to “hook into” React state and lifecycle features from your components.
+Hooks are new helper functions that allow you to “hook into” React state and lifecycle features from your functional components.
 
 </div>
 
