--- a/pages/data.mdx
+++ b/pages/data.mdx
@@ -26,7 +26,7 @@ It updates the user interface of your project on every change, and can be used t
 
 <Callout>
   Data objects are intended for Overrides only and not for
-  use in components in Framer X.
+  use in components in Framer&nbsp;X.
 </Callout>
 
 </div>
