Added Named easings functions to Ease section

--- a/pages/animation.mdx
+++ b/pages/animation.mdx
@@ -360,6 +360,22 @@ An animation that animates between two or more values over a specific `duration`
 <APIProperty name="Tween.type" />
 <APIProperty name="Tween.duration" />
 <APIProperty name="Tween.ease" />
+
+<div>
+  <p>
+    These string are the existing named easing functions
+    built into Framer.
+  </p>
+</div>
+
+- `"linear"`
+- `"easeIn"`, `"easeOut"`, `"easeInOut"`
+- `"circIn"`, `"circOut"`, `"circInOut"`
+- `"backIn"`, `"backOut"`, `"backInOut"`
+- `"anticipate"`
+
+---
+
 <APIProperty name="Tween.easings" />
 <APIProperty name="Tween.from" />
 <APIProperty name="Tween.loop" />
