fix spelling and sentence

--- a/pages/animation.mdx
+++ b/pages/animation.mdx
@@ -363,8 +363,8 @@ An animation that animates between two or more values over a specific `duration`
 
 <div>
   <p>
-    These string are the existing named easing functions
-    built into Framer.
+    These strings are the built-in named easing functions in
+    Framer.
   </p>
 </div>
 
