Add highlight prop to API components (#28)

--- a/pages/render-target.mdx
+++ b/pages/render-target.mdx
@@ -29,5 +29,5 @@ Components can use the `RenderTarget.current()` method to check for the environm
 
 ## Functions
 
-<APIFunction name="RenderTarget.current()" />
-<APIFunction name="RenderTarget.hasRestrictions()" />
+<APIFunction name="RenderTarget.current()" highlight="2-4" />
+<APIFunction name="RenderTarget.hasRestrictions()" highlight="2-4" />
