--- a/pages/assets.mdx
+++ b/pages/assets.mdx
@@ -63,30 +63,25 @@ export function MyComponent() {
 }
 ```
 
-This URL will change depending on where and when your project is opened so
-use it directly within your components and avoid storing the result or
-using it as a value in a custom property control.
+This URL will change depending on where and when your
+project is opened so use it directly within your
+components and avoid storing the result or using it as a
+value in a custom property control.
 
-```jsx highlight(5-6,10,14-15,19)
-import * as React from "react"
-import { Frame } from "framer"
-import { url } from "framer/resource"
-
-// AVOID: Try and avoid doing this as the returned url may change over time.
-const image = url("./code/test.png")
-
-export function MyComponent() {
-  return (
-    <Frame image={image} size={"100%"} />
-  )
-}
-
-// GOOD: Use the relative path and call url() within your component.
+```jsx highlight(1-2,5)
+// GOOD: Use a relative path. Call url() within component.
 const image = "./code/test.png"
 
 export function MyComponent() {
-  return (
-    <Frame image={url(image)} size={"100%"} />
-  )
+  return <Frame image={url(image)} size={"100%"} />
+}
+```
+
+```jsx highlight(1-2,5)
+// BAD: Avoid this. The returned url may change over time.
+const image = url("./code/test.png")
+
+export function MyComponent() {
+  return <Frame image={image} size={"100%"} />
 }
 ```
