--- a/pages/animation-deprecated.mdx
+++ b/pages/animation-deprecated.mdx
@@ -10,7 +10,7 @@ import {
   Callout,
 } from "../components"
 
-export default Template
+export default Template("Animation (deprecated API)")
 
 ## Animation (Deprecated)
 
