--- a/pages/animation.mdx
+++ b/pages/animation.mdx
@@ -15,7 +15,7 @@ import {
   Todo,
 } from "../components"
 
-export default Template
+export default Template("Animation")
 
 # Animation
 
@@ -376,12 +376,12 @@ An animation that animates between two or more values over a specific `duration`
 
 ---
 
-<APIProperty name="Tween.easings" />
 <APIProperty name="Tween.from" />
 <APIProperty name="Tween.loop" />
-<APIProperty name="Tween.yoyo" />
-<APIProperty name="Tween.times" />
 <APIProperty name="Tween.flip" />
+<APIProperty name="Tween.yoyo" />
+<APIProperty name="Tween.repeatDelay" />
+<APIProperty name="Tween.times" />
 
 ## Spring
 
