--- a/pages/assets.mdx
+++ b/pages/assets.mdx
@@ -7,7 +7,7 @@ import {
   APIParams,
 } from "../components"
 
-export default Template
+export default Template("Assets")
 
 # Assets
 
@@ -43,9 +43,7 @@ the component is being used (for example, in the Canvas, Preview or Export).
     </p>
   </APIParam>
   <APIParam name="returns" type="string">
-    <p>
-      A full URL to the file including origin.
-    </p>
+    <p>A full URL to the file including origin.</p>
   </APIParam>
 </APIParams>
 <br/>
