--- a/pages/frame.mdx
+++ b/pages/frame.mdx
@@ -12,7 +12,7 @@ import {
   Todo,
 } from "../components"
 
-export default Template
+export default Template("Frame")
 
 <!-- Use RefAnchor here because we manually layout Frame -->
 
