--- a/pages/page.mdx
+++ b/pages/page.mdx
@@ -10,7 +10,7 @@ import {
   APIEnum,
 } from "../components"
 
-export default Template
+export default Template("Page component")
 
 # Page
 
@@ -93,6 +93,7 @@ Each page is positioned in 3D, behind the current page.
 ```tsx
 <Page defaultEffect={"coverflow"} />
 ```
+
 ### Wheel
 
 Each page is gently titled in 3D, like a wheel.
@@ -100,6 +101,7 @@ Each page is gently titled in 3D, like a wheel.
 ```tsx
 <Page defaultEffect={"wheel"} />
 ```
+
 ### Pile
 
 Each page is stacked behind the current page.
