--- a/pages/property-controls.mdx
+++ b/pages/property-controls.mdx
@@ -6,7 +6,7 @@ import {
   Template,
 } from "../components"
 
-export default Template
+export default Template("Property Controls")
 
 # Property Controls
 
