--- a/pages/render-target.mdx
+++ b/pages/render-target.mdx
@@ -7,7 +7,7 @@ import {
   APIEnumField,
 } from "../components"
 
-export default Template
+export default Template("Render Target")
 
 # Render Target
 
