--- a/pages/canvas-components.mdx
+++ b/pages/canvas-components.mdx
@@ -10,7 +10,7 @@ import {
   Todo,
 } from "../components"
 
-export default Template
+export default Template("Canvas components")
 
 # Canvas Components
 
