--- a/pages/frame-deprecated.mdx
+++ b/pages/frame-deprecated.mdx
@@ -8,7 +8,7 @@ import {
   APIMergedInterface,
 } from "../components"
 
-export default Template
+export default Template("Frame (deprecated API)")
 
 ## Frame (Deprecated) <RefAnchor name="DeprecatedFrame" />
 
