--- a/pages/utilities.mdx
+++ b/pages/utilities.mdx
@@ -11,7 +11,7 @@ import {
   APIEnumField,
 } from "../components"
 
-export default Template
+export default Template("Utilities")
 
 # Utilities
 
@@ -60,6 +60,8 @@ export function MyComponent() {
 ## useTransform
 
 <APIFunction name="useTransform()" />
+
+<APIFunction name="(useTransform:1)" />
 
 ---
 
@@ -293,6 +295,12 @@ export function MyComponent() {
 ## useMotionValue
 
 <APIFunction name="useMotionValue()" />
+
+---
+
+## useSpring
+
+<APIFunction name="useSpring()" />
 
 ---
 
