Migrate code highlight feature to use “Props” API (#35)

--- a/pages/assets.mdx
+++ b/pages/assets.mdx
@@ -25,9 +25,9 @@ images and other media from code.
 
 ## Functions
 
-<div class="framer-api framer-function">
+<div className="framer-api framer-function">
 
-<H3 id="url"><code class="language-typescript">url(path: string): string</code></H3>
+<H3 id="url"><code className="language-typescript">url(path: string): string</code></H3>
 
 </div>
 <div>
@@ -49,7 +49,7 @@ the component is being used (for example, in the Canvas, Preview or Export).
 <br/>
 </div>
 
-```jsx highlight(3,7)
+```jsx highlight=3,7
 import * as React from "react"
 import { Frame } from "framer"
 import { url } from "framer/resource"
@@ -66,7 +66,7 @@ project is opened so use it directly within your
 components and avoid storing the result or using it as a
 value in a custom property control.
 
-```jsx highlight(1-2,5)
+```jsx highlight=1-2,5
 // GOOD: Use a relative path. Call url() within component.
 const image = "./code/test.png"
 
@@ -75,7 +75,7 @@ export function MyComponent() {
 }
 ```
 
-```jsx highlight(1-2,5)
+```jsx highlight=1-2,5
 // BAD: Avoid this. The returned url may change over time.
 const image = url("./code/test.png")
 
