--- a/pages/motion/animate-presence.mdx
+++ b/pages/motion/animate-presence.mdx
@@ -159,7 +159,7 @@ By setting `initial={false}` on `AnimatePresence`, components present when `Anim
 
 </div>
 
-```jsx highlight(2, 5-6)
+```jsx highlight=2,5-6
 const MyComponent = ({ isVisible }) => (
   <AnimatePresence initial={false}>
     {isVisible && (
