--- a/pages/utilities.mdx
+++ b/pages/utilities.mdx
@@ -40,7 +40,7 @@ The `transform` method also supports ranges of more than 2 numbers. Given an inp
 
 </div>
 
-```jsx highlight(2, 5-9)
+```jsx highlight=2,5-9
 import * as React from "react"
 import { Frame, transform } from "framer"
 
@@ -76,7 +76,7 @@ The `x` value starts at `0`, and we’re converting the horizontal movement of t
 
 </div>
 
-```jsx highlight(2, 5-6, 8)
+```jsx highlight=2,5-6,8
 import * as React from "react"
 import { Frame, useMotionValue, useTransform } from "framer"
 
@@ -106,7 +106,7 @@ In this example, we’re moving a `Frame` four times in a row on every single ta
 
 </div>
 
-```jsx highlight(2, 5, 7-12, 14)
+```jsx highlight=2,5,7-12,14
 import * as React from "react"
 import { Frame, useAnimation } from "framer"
 
@@ -140,7 +140,7 @@ Finally, we’re adding some default visual properties like `opacity`, `size` an
 
 </div>
 
-```javascript highlight(2, 5, 7-10, 13-28)
+```javascript highlight=2,5,7-10,13-28
 import * as React from "react"
 import { Frame, useAnimation } from "framer"
 
@@ -223,7 +223,7 @@ Tapping on the Frame will trigger a cycle, causing the Frame to animate to the v
 
 </div>
 
-```jsx highlight(2, 5-9, 11-15, 19-21)
+```jsx highlight=2,5-9,11-15,19-21
 import * as React from "react"
 import { Frame, useCycle } from "framer"
 
@@ -262,7 +262,7 @@ As in the last example, tapping on the Frame will cycle between three values. Ho
 
 </div>
 
-```jsx highlight(11-15, 22)
+```jsx highlight=11-15,22
 import * as React from "react"
 import { Frame, useCycle } from "framer"
 
