--- a/pages/frame.mdx
+++ b/pages/frame.mdx
@@ -44,7 +44,7 @@ The `Frame` component is a `div` with extra options and opinionated defaults to 
 
 </div>
 
-```jsx
+```jsx highlight=1
 import * as React from "react"
 import { Frame } from "framer"
 
