Passive value upgrade guide (#41)
* passive value upgrade guide

* addressing PR comments

--- a/pages/motion/migrate-from-pose.mdx
+++ b/pages/motion/migrate-from-pose.mdx
@@ -15,11 +15,9 @@ import {
   Todo,
 } from "../../components"
 
-export default Template(
-  "Migrate to Framer Motion from Pose"
-)
+export default Template("Migrate from Pose to Motion")
 
-# Migrate to Framer Motion from Pose
+# Migrate from Pose to Motion
 
 <span className="lead">
   How to convert a Pose project to Framer Motion.
@@ -325,6 +323,40 @@ These constraints are enforced elastically now, but we can remove this effect by
 />
 ```
 
+## Passive values
+
+Pose allowed you to passively animate values based on the output of others.
+
+```jsx
+const Box = posed.div({
+  draggable: "x",
+  passive: {
+    y: ["x", latestX => latestX * 2],
+  },
+})
+```
+
+You could attach values either to others on the same component, or those higher up the hierarchy via labels.
+
+This could be useful but the strict hierarchal relationship was limiting and the use of labels created brittle, weak dependencies.
+
+Motion tracks the state and velocity of every animating value <Link href="motion/motionvalue">with a `MotionValue`</Link>. Usually, it creates these by default, but by manually creating them they can be passed between components, and interesting relationships can be formed with <Link href="motion/motionvalue#usetransform">the `useTransform` hook</Link>.
+
+```jsx
+import {
+  motion,
+  useMotionValue,
+  useTransform,
+} from "framer-motion"
+
+export const Box = () => {
+  const x = useMotionValue(0)
+  const y = useTransform(x, latestX => latestX * 2)
+
+  return <motion.div drag style={{ x, y }} />
+}
+```
+
 ## PoseGroup
 
 The final difference between the two libraries is the `PoseGroup` component. It provided three main functionalities:
@@ -337,7 +369,7 @@ This FLIP animation to unmount has been removed, again as it often lead to unexp
 
 ### Unmount animations
 
-There's a [new component](/api/motion/animate-presence), `AnimatePresence`, that is responsible for unmount animations. It works in much the same way as `PoseGroup`, enabling the use of an `exit` prop that can either be an object or the name of a variant.
+There's a <Link href="motion/animate-presence">new component</Link>, `AnimatePresence`, that is responsible for unmount animations. It works in much the same way as `PoseGroup`, enabling the use of an `exit` prop that can either be an object or the name of a variant.
 
 ```jsx
 <AnimatePresence>
@@ -355,7 +387,7 @@ There's a [new component](/api/motion/animate-presence), `AnimatePresence`, that
 
 With `PoseGroup`, when an item was removed all of the other items would animate smoothly into their new place.
 
-This has been evolved into a [new prop called `positionTransition`](/api/motion/component/#animationprops.positiontransition), and it doesn't require the use of `AnimatePresence` to work (but they do work nicely together).
+This has been evolved into a <Link href="motion/component/#animationprops.positiontransition">new prop called `positionTransition`</Link>, and it doesn't require the use of `AnimatePresence` to work (but they do work nicely together).
 
 ```jsx
 <motion.div positionTransition />
