Upgrade motion and library (#46)
* Upgrade motion and library

* Fix broken APIFunction references

The api-extractor now interprets functions extended via a namespace
as an overloaded function. So what had an id of (animate:function)
now has an id of (animate:1).

This commit hard-codes these changes pending an update to the
FramerAPI class to properly handle the change.

--- a/pages/animation-deprecated.mdx
+++ b/pages/animation-deprecated.mdx
@@ -20,13 +20,13 @@ These are the legacy Animation APIs used by Framer Libary v0.10.x and earlier. A
 
 </Callout>
 
-<APIFunction name="animate()" />
+<APIFunction name="(animate:1)" />
 
 <APINamespace name="animate" />
 
 <APIInterface name="Animatable" />
 
-<APIFunction name="Animatable" />
+<APIFunction name="(animatable:1)" />
 
 <APINamespace name="Animatable" />
 
