--- a/pages/color.mdx
+++ b/pages/color.mdx
@@ -63,7 +63,7 @@ export function MyComponent() {
 
 ## Create
 
-<APIFunction name="Color()" />
+<APIFunction name="(color:1)" />
 <APIFunction name="Color.random()" />
 
 ## Modify
