Adding positionTransition and AnimatePresence to the docs (#43)

--- a/pages/frame.mdx
+++ b/pages/frame.mdx
@@ -248,8 +248,9 @@ The following are properties accepted by the `Frame` component for animation, in
 ---
 
 <APIProperty name="AnimationProps.animate" />
-<APIProperty name="AnimationProps.transition" />
 <APIProperty name="MotionProps.initial" />
+<APIProperty name="AnimationProps.transition" />
+<APIProperty name="AnimationProps.positionTransition" />
 
 <APIFunction name="MotionCallbacks.onUpdate()" />
 <APIFunction name="MotionCallbacks.onAnimationComplete()" />
