--- a/pages/motion/animate-presence.mdx
+++ b/pages/motion/animate-presence.mdx
@@ -30,7 +30,7 @@ export default Template("AnimatePresence")
 
 Wrapping one or more `motion` components in `AnimatePresence` enables the use of an `exit` prop, which can define an animation to use when a component is unmounted.
 
-It can also be used to suppress initial animations only on components that are present when it first mounts.
+It can also be used to suppress initial animations on components that are present when `AnimatePresence` first mounts.
 
 </div>
 
