Add missing documentation (#48)

--- a/pages/frame.mdx
+++ b/pages/frame.mdx
@@ -194,6 +194,7 @@ When the combination of layout properties is incompatible, the override order is
 <APIProperty name="VisualProperties.color" />
 <APIProperty name="VisualProperties.border" />
 <APIProperty name="VisualProperties.radius" />
+<APIProperty name="VisualProperties.shadow" />
 <APIProperty name="VisualProperties.overflow" />
 
 ---
@@ -238,6 +239,8 @@ The exact order how the transforms are applied is: `translate`, `scale`, `rotate
 <APIProperty name="CSSTransformProperties.originY" />
 <APIProperty name="CSSTransformProperties.originZ" />
 <APIProperty name="CSSTransformProperties.perspective" />
+<APIProperty name="VisualProperties.preserve3d" />
+<APIProperty name="VisualProperties.backfaceVisible" />
 
 <APIFunction name="MotionProps.transformTemplate()" />
 
